--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,7 @@ ul {
     vertical-align: middle;
     margin-right: 5px;
 }
+
 .radio:checked ~ .item-choice::before {
     background-image: url(../svg/form-circle.svg);   
 }
@@ -942,9 +943,7 @@ margin-left: 37px;
 
 .wrap-text {
     border: 4px solid rgba(181, 159, 91, 0.6 );
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
+    display: block;
     padding: 40px 5.7% 20px;
 }
 
